--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylsheet" href="index.css">
         <title>hello world </title>
     </head>
     <body>
