--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylsheet" href="index.css">
+        <link rel="stylesheet" href="index.css">
         <title>hello world </title>
     </head>
     <body>
-        <h1>hjello i learn git </h1>
+        <header>
+            <div>logo
+                <div>aticle</div>
+                <div>groupe</div>
+                <div>antecedent</div>
+            </div>
+        </header>
+        <h1>hello i learn git </h1>
     </body>
 </html>
