ajout des identifiant pour pouvoir modifier l'entete

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <header>
-            <div>logo
-                <div>aticle</div>
-                <div>groupe</div>
-                <div>antecedent</div>
+            <div id="logo">logo
+                <div id="article">article</div>
+                <div id="groupe">groupe</div>
+                <div id="antecedent">antecedent</div>
             </div>
         </header>
         <h1>hello i learn git </h1>
